// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query Copilot Feedback Modal snapshot test shoud render and match snapshot 1`] = `
<Modal
  isOpen={true}
  styles={
    {
      "main": {
        "borderRadius": 8,
        "maxWidth": 600,
      },
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <Stack
      style={
        {
          "padding": 24,
        }
      }
    >
      <Stack
        horizontal={true}
        horizontalAlign="space-between"
      >
        <Text
          style={
            {
              "fontSize": 20,
              "fontWeight": 600,
              "marginBottom": 20,
            }
          }
        >
          Send feedback to Microsoft
        </Text>
        <CustomizedIconButton
          iconProps={
            {
              "iconName": "Cancel",
            }
          }
          onClick={[Function]}
        />
      </Stack>
      <Text
        style={
          {
            "fontSize": 14,
            "marginBottom": 14,
          }
        }
      >
        Your feedback will help improve the experience.
      </Text>
      <StyledTextFieldBase
        label="Description"
        multiline={true}
        onChange={[Function]}
        placeholder="Provide more details"
        required={true}
        rows={3}
        styles={
          {
            "root": {
              "marginBottom": 14,
            },
          }
        }
        value=""
      />
      <StyledTextFieldBase
        defaultValue="test query"
        label="Query generated"
        multiline={true}
        readOnly={true}
        rows={3}
        styles={
          {
            "fieldGroup": {
              "backgroundColor": "#F3F2F1",
              "borderColor": "#D1D1D1",
              "borderRadius": 4,
            },
            "root": {
              "marginBottom": 14,
            },
          }
        }
      />
      <Text
        style={
          {
            "fontSize": 12,
            "marginBottom": 14,
          }
        }
      >
        Microsoft will process the feedback you submit pursuant to your organization’s instructions in order to improve your and your organization’s experience with this product. If you have any questions about the use of feedback data, please contact your tenant administrator. Processing of feedback data is governed by the Microsoft Products and Services Data Protection Addendum between your organization and Microsoft, and the feedback you submit is considered Personal Data under that addendum. Please see the
         
        <StyledLinkBase
          href="https://go.microsoft.com/fwlink/?LinkId=521839"
          target="_blank"
        >
          Privacy statement
        </StyledLinkBase>
         
        for more information.
      </Text>
      <Stack
        horizontal={true}
        horizontalAlign="end"
      >
        <CustomizedPrimaryButton
          styles={
            {
              "root": {
                "marginRight": 8,
              },
            }
          }
          type="submit"
        >
          Submit
        </CustomizedPrimaryButton>
        <CustomizedDefaultButton
          onClick={[Function]}
        >
          Cancel
        </CustomizedDefaultButton>
      </Stack>
    </Stack>
  </form>
</Modal>
`;

exports[`Query Copilot Feedback Modal snapshot test should cancel submission 1`] = `
<Modal
  isOpen={false}
  styles={
    {
      "main": {
        "borderRadius": 8,
        "maxWidth": 600,
      },
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <Stack
      style={
        {
          "padding": 24,
        }
      }
    >
      <Stack
        horizontal={true}
        horizontalAlign="space-between"
      >
        <Text
          style={
            {
              "fontSize": 20,
              "fontWeight": 600,
              "marginBottom": 20,
            }
          }
        >
          Send feedback to Microsoft
        </Text>
        <CustomizedIconButton
          iconProps={
            {
              "iconName": "Cancel",
            }
          }
          onClick={[Function]}
        />
      </Stack>
      <Text
        style={
          {
            "fontSize": 14,
            "marginBottom": 14,
          }
        }
      >
        Your feedback will help improve the experience.
      </Text>
      <StyledTextFieldBase
        label="Description"
        multiline={true}
        onChange={[Function]}
        placeholder="Provide more details"
        required={true}
        rows={3}
        styles={
          {
            "root": {
              "marginBottom": 14,
            },
          }
        }
        value=""
      />
      <StyledTextFieldBase
        defaultValue="test query"
        label="Query generated"
        multiline={true}
        readOnly={true}
        rows={3}
        styles={
          {
            "fieldGroup": {
              "backgroundColor": "#F3F2F1",
              "borderColor": "#D1D1D1",
              "borderRadius": 4,
            },
            "root": {
              "marginBottom": 14,
            },
          }
        }
      />
      <Text
        style={
          {
            "fontSize": 12,
            "marginBottom": 14,
          }
        }
      >
        Microsoft will process the feedback you submit pursuant to your organization’s instructions in order to improve your and your organization’s experience with this product. If you have any questions about the use of feedback data, please contact your tenant administrator. Processing of feedback data is governed by the Microsoft Products and Services Data Protection Addendum between your organization and Microsoft, and the feedback you submit is considered Personal Data under that addendum. Please see the
         
        <StyledLinkBase
          href="https://go.microsoft.com/fwlink/?LinkId=521839"
          target="_blank"
        >
          Privacy statement
        </StyledLinkBase>
         
        for more information.
      </Text>
      <Stack
        horizontal={true}
        horizontalAlign="end"
      >
        <CustomizedPrimaryButton
          styles={
            {
              "root": {
                "marginRight": 8,
              },
            }
          }
          type="submit"
        >
          Submit
        </CustomizedPrimaryButton>
        <CustomizedDefaultButton
          onClick={[Function]}
        >
          Cancel
        </CustomizedDefaultButton>
      </Stack>
    </Stack>
  </form>
</Modal>
`;

exports[`Query Copilot Feedback Modal snapshot test should close on cancel click 1`] = `
<Modal
  isOpen={false}
  styles={
    {
      "main": {
        "borderRadius": 8,
        "maxWidth": 600,
      },
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <Stack
      style={
        {
          "padding": 24,
        }
      }
    >
      <Stack
        horizontal={true}
        horizontalAlign="space-between"
      >
        <Text
          style={
            {
              "fontSize": 20,
              "fontWeight": 600,
              "marginBottom": 20,
            }
          }
        >
          Send feedback to Microsoft
        </Text>
        <CustomizedIconButton
          iconProps={
            {
              "iconName": "Cancel",
            }
          }
          onClick={[Function]}
        />
      </Stack>
      <Text
        style={
          {
            "fontSize": 14,
            "marginBottom": 14,
          }
        }
      >
        Your feedback will help improve the experience.
      </Text>
      <StyledTextFieldBase
        label="Description"
        multiline={true}
        onChange={[Function]}
        placeholder="Provide more details"
        required={true}
        rows={3}
        styles={
          {
            "root": {
              "marginBottom": 14,
            },
          }
        }
        value=""
      />
      <StyledTextFieldBase
        defaultValue="test query"
        label="Query generated"
        multiline={true}
        readOnly={true}
        rows={3}
        styles={
          {
            "fieldGroup": {
              "backgroundColor": "#F3F2F1",
              "borderColor": "#D1D1D1",
              "borderRadius": 4,
            },
            "root": {
              "marginBottom": 14,
            },
          }
        }
      />
      <Text
        style={
          {
            "fontSize": 12,
            "marginBottom": 14,
          }
        }
      >
        Microsoft will process the feedback you submit pursuant to your organization’s instructions in order to improve your and your organization’s experience with this product. If you have any questions about the use of feedback data, please contact your tenant administrator. Processing of feedback data is governed by the Microsoft Products and Services Data Protection Addendum between your organization and Microsoft, and the feedback you submit is considered Personal Data under that addendum. Please see the
         
        <StyledLinkBase
          href="https://go.microsoft.com/fwlink/?LinkId=521839"
          target="_blank"
        >
          Privacy statement
        </StyledLinkBase>
         
        for more information.
      </Text>
      <Stack
        horizontal={true}
        horizontalAlign="end"
      >
        <CustomizedPrimaryButton
          styles={
            {
              "root": {
                "marginRight": 8,
              },
            }
          }
          type="submit"
        >
          Submit
        </CustomizedPrimaryButton>
        <CustomizedDefaultButton
          onClick={[Function]}
        >
          Cancel
        </CustomizedDefaultButton>
      </Stack>
    </Stack>
  </form>
</Modal>
`;

exports[`Query Copilot Feedback Modal snapshot test should get user unput 1`] = `
<Modal
  isOpen={false}
  styles={
    {
      "main": {
        "borderRadius": 8,
        "maxWidth": 600,
      },
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <Stack
      style={
        {
          "padding": 24,
        }
      }
    >
      <Stack
        horizontal={true}
        horizontalAlign="space-between"
      >
        <Text
          style={
            {
              "fontSize": 20,
              "fontWeight": 600,
              "marginBottom": 20,
            }
          }
        >
          Send feedback to Microsoft
        </Text>
        <CustomizedIconButton
          iconProps={
            {
              "iconName": "Cancel",
            }
          }
          onClick={[Function]}
        />
      </Stack>
      <Text
        style={
          {
            "fontSize": 14,
            "marginBottom": 14,
          }
        }
      >
        Your feedback will help improve the experience.
      </Text>
      <StyledTextFieldBase
        label="Description"
        multiline={true}
        onChange={[Function]}
        placeholder="Provide more details"
        required={true}
        rows={3}
        styles={
          {
            "root": {
              "marginBottom": 14,
            },
          }
        }
        value="test user input"
      />
      <StyledTextFieldBase
        defaultValue="test query"
        label="Query generated"
        multiline={true}
        readOnly={true}
        rows={3}
        styles={
          {
            "fieldGroup": {
              "backgroundColor": "#F3F2F1",
              "borderColor": "#D1D1D1",
              "borderRadius": 4,
            },
            "root": {
              "marginBottom": 14,
            },
          }
        }
      />
      <Text
        style={
          {
            "fontSize": 12,
            "marginBottom": 14,
          }
        }
      >
        Microsoft will process the feedback you submit pursuant to your organization’s instructions in order to improve your and your organization’s experience with this product. If you have any questions about the use of feedback data, please contact your tenant administrator. Processing of feedback data is governed by the Microsoft Products and Services Data Protection Addendum between your organization and Microsoft, and the feedback you submit is considered Personal Data under that addendum. Please see the
         
        <StyledLinkBase
          href="https://go.microsoft.com/fwlink/?LinkId=521839"
          target="_blank"
        >
          Privacy statement
        </StyledLinkBase>
         
        for more information.
      </Text>
      <Stack
        horizontal={true}
        horizontalAlign="end"
      >
        <CustomizedPrimaryButton
          styles={
            {
              "root": {
                "marginRight": 8,
              },
            }
          }
          type="submit"
        >
          Submit
        </CustomizedPrimaryButton>
        <CustomizedDefaultButton
          onClick={[Function]}
        >
          Cancel
        </CustomizedDefaultButton>
      </Stack>
    </Stack>
  </form>
</Modal>
`;

exports[`Query Copilot Feedback Modal snapshot test should not render dont show again button 1`] = `
<Modal
  isOpen={false}
  styles={
    {
      "main": {
        "borderRadius": 8,
        "maxWidth": 600,
      },
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <Stack
      style={
        {
          "padding": 24,
        }
      }
    >
      <Stack
        horizontal={true}
        horizontalAlign="space-between"
      >
        <Text
          style={
            {
              "fontSize": 20,
              "fontWeight": 600,
              "marginBottom": 20,
            }
          }
        >
          Send feedback to Microsoft
        </Text>
        <CustomizedIconButton
          iconProps={
            {
              "iconName": "Cancel",
            }
          }
          onClick={[Function]}
        />
      </Stack>
      <Text
        style={
          {
            "fontSize": 14,
            "marginBottom": 14,
          }
        }
      >
        Your feedback will help improve the experience.
      </Text>
      <StyledTextFieldBase
        label="Description"
        multiline={true}
        onChange={[Function]}
        placeholder="Provide more details"
        required={true}
        rows={3}
        styles={
          {
            "root": {
              "marginBottom": 14,
            },
          }
        }
        value=""
      />
      <StyledTextFieldBase
        defaultValue="test query"
        label="Query generated"
        multiline={true}
        readOnly={true}
        rows={3}
        styles={
          {
            "fieldGroup": {
              "backgroundColor": "#F3F2F1",
              "borderColor": "#D1D1D1",
              "borderRadius": 4,
            },
            "root": {
              "marginBottom": 14,
            },
          }
        }
      />
      <Text
        style={
          {
            "fontSize": 12,
            "marginBottom": 14,
          }
        }
      >
        Microsoft will process the feedback you submit pursuant to your organization’s instructions in order to improve your and your organization’s experience with this product. If you have any questions about the use of feedback data, please contact your tenant administrator. Processing of feedback data is governed by the Microsoft Products and Services Data Protection Addendum between your organization and Microsoft, and the feedback you submit is considered Personal Data under that addendum. Please see the
         
        <StyledLinkBase
          href="https://go.microsoft.com/fwlink/?LinkId=521839"
          target="_blank"
        >
          Privacy statement
        </StyledLinkBase>
         
        for more information.
      </Text>
      <Stack
        horizontal={true}
        horizontalAlign="end"
      >
        <CustomizedPrimaryButton
          styles={
            {
              "root": {
                "marginRight": 8,
              },
            }
          }
          type="submit"
        >
          Submit
        </CustomizedPrimaryButton>
        <CustomizedDefaultButton
          onClick={[Function]}
        >
          Cancel
        </CustomizedDefaultButton>
      </Stack>
    </Stack>
  </form>
</Modal>
`;

exports[`Query Copilot Feedback Modal snapshot test should render dont show again button and check it 1`] = `
<Modal
  isOpen={true}
  styles={
    {
      "main": {
        "borderRadius": 8,
        "maxWidth": 600,
      },
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <Stack
      style={
        {
          "padding": 24,
        }
      }
    >
      <Stack
        horizontal={true}
        horizontalAlign="space-between"
      >
        <Text
          style={
            {
              "fontSize": 20,
              "fontWeight": 600,
              "marginBottom": 20,
            }
          }
        >
          Send feedback to Microsoft
        </Text>
        <CustomizedIconButton
          iconProps={
            {
              "iconName": "Cancel",
            }
          }
          onClick={[Function]}
        />
      </Stack>
      <Text
        style={
          {
            "fontSize": 14,
            "marginBottom": 14,
          }
        }
      >
        Your feedback will help improve the experience.
      </Text>
      <StyledTextFieldBase
        label="Description"
        multiline={true}
        onChange={[Function]}
        placeholder="Provide more details"
        required={true}
        rows={3}
        styles={
          {
            "root": {
              "marginBottom": 14,
            },
          }
        }
        value=""
      />
      <StyledTextFieldBase
        defaultValue="test query"
        label="Query generated"
        multiline={true}
        readOnly={true}
        rows={3}
        styles={
          {
            "fieldGroup": {
              "backgroundColor": "#F3F2F1",
              "borderColor": "#D1D1D1",
              "borderRadius": 4,
            },
            "root": {
              "marginBottom": 14,
            },
          }
        }
      />
      <Text
        style={
          {
            "fontSize": 12,
            "marginBottom": 14,
          }
        }
      >
        Microsoft will process the feedback you submit pursuant to your organization’s instructions in order to improve your and your organization’s experience with this product. If you have any questions about the use of feedback data, please contact your tenant administrator. Processing of feedback data is governed by the Microsoft Products and Services Data Protection Addendum between your organization and Microsoft, and the feedback you submit is considered Personal Data under that addendum. Please see the
         
        <StyledLinkBase
          href="https://go.microsoft.com/fwlink/?LinkId=521839"
          target="_blank"
        >
          Privacy statement
        </StyledLinkBase>
         
        for more information.
      </Text>
      <StyledCheckboxBase
        checked={true}
        label="Don't show me this next time"
        onChange={[Function]}
        styles={
          {
            "label": {
              "paddingLeft": 0,
            },
            "root": {
              "marginBottom": 14,
            },
          }
        }
      />
      <Stack
        horizontal={true}
        horizontalAlign="end"
      >
        <CustomizedPrimaryButton
          styles={
            {
              "root": {
                "marginRight": 8,
              },
            }
          }
          type="submit"
        >
          Submit
        </CustomizedPrimaryButton>
        <CustomizedDefaultButton
          onClick={[Function]}
        >
          Cancel
        </CustomizedDefaultButton>
      </Stack>
    </Stack>
  </form>
</Modal>
`;

exports[`Query Copilot Feedback Modal snapshot test should submit submission 1`] = `
<Modal
  isOpen={false}
  styles={
    {
      "main": {
        "borderRadius": 8,
        "maxWidth": 600,
      },
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <Stack
      style={
        {
          "padding": 24,
        }
      }
    >
      <Stack
        horizontal={true}
        horizontalAlign="space-between"
      >
        <Text
          style={
            {
              "fontSize": 20,
              "fontWeight": 600,
              "marginBottom": 20,
            }
          }
        >
          Send feedback to Microsoft
        </Text>
        <CustomizedIconButton
          iconProps={
            {
              "iconName": "Cancel",
            }
          }
          onClick={[Function]}
        />
      </Stack>
      <Text
        style={
          {
            "fontSize": 14,
            "marginBottom": 14,
          }
        }
      >
        Your feedback will help improve the experience.
      </Text>
      <StyledTextFieldBase
        label="Description"
        multiline={true}
        onChange={[Function]}
        placeholder="Provide more details"
        required={true}
        rows={3}
        styles={
          {
            "root": {
              "marginBottom": 14,
            },
          }
        }
        value=""
      />
      <StyledTextFieldBase
        defaultValue="test query"
        label="Query generated"
        multiline={true}
        readOnly={true}
        rows={3}
        styles={
          {
            "fieldGroup": {
              "backgroundColor": "#F3F2F1",
              "borderColor": "#D1D1D1",
              "borderRadius": 4,
            },
            "root": {
              "marginBottom": 14,
            },
          }
        }
      />
      <Text
        style={
          {
            "fontSize": 12,
            "marginBottom": 14,
          }
        }
      >
        Microsoft will process the feedback you submit pursuant to your organization’s instructions in order to improve your and your organization’s experience with this product. If you have any questions about the use of feedback data, please contact your tenant administrator. Processing of feedback data is governed by the Microsoft Products and Services Data Protection Addendum between your organization and Microsoft, and the feedback you submit is considered Personal Data under that addendum. Please see the
         
        <StyledLinkBase
          href="https://go.microsoft.com/fwlink/?LinkId=521839"
          target="_blank"
        >
          Privacy statement
        </StyledLinkBase>
         
        for more information.
      </Text>
      <Stack
        horizontal={true}
        horizontalAlign="end"
      >
        <CustomizedPrimaryButton
          styles={
            {
              "root": {
                "marginRight": 8,
              },
            }
          }
          type="submit"
        >
          Submit
        </CustomizedPrimaryButton>
        <CustomizedDefaultButton
          onClick={[Function]}
        >
          Cancel
        </CustomizedDefaultButton>
      </Stack>
    </Stack>
  </form>
</Modal>
`;
